--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -66,6 +66,7 @@ The following are the issues solved for 3.8 release.
 
 - JCache client needs access to CacheLoader implementation to work. [9453]
 - The matching wildcard is strict, but no declaration can be found for element hz:hazelcast. [9406]
+- "Connection Reset" warning shows up in the class `CloudyUtility`. [9404]
 - The method getAll is not updating the localMapStats. [9373]
 - Hazelcast 3.7.3 and Spring Boot 1.4.2 get the error PortableFactory[-22] is already registered. [9353]
 - There is an issue when integrating with WebLogic 12c. Classloading logging should be added when DefaultNodeExtension is loaded by multiple classloaders. [9291]
@@ -73,6 +74,7 @@ The following are the issues solved for 3.8 release.
 - Problems with timeout in blocking calls. [9250]
 - Stale reads from Map inside a transaction should be guaranteed, when Near Cache and delayed MapStore are enabled. [9248]
 - Client protocol cannot handle "null"s in the collection. [9240]
+- `LifecycleState` events are not received when Hazelcast docker image is used. [9189]
 - If there is no network, multicast socket exception is thrown. [9081]
 - Hazelcast is not handling XML configuration attribute for DurableExecutorService. [9078]
 - Callback for time to live (for map eviction) is invoked with a significant delay. [8894]
@@ -81,6 +83,7 @@ The following are the issues solved for 3.8 release.
 - Nested queries on VersionedPortables with different versions cannot be performed. Hazelcast throws IllegalArgumentException. [8846]
 - Fixed max-size value behavior for Near Cache configuration. If you set 0 for the max-size, now, it is valued as Integer.MAX_VALUE as expected and documented. [8826]
 - While generating the XML string from a configuration object in ConfigXmlGenerator.generate() method, native-memory configuration is not appended to the result string. This causes the native-memory configuration for members not to be shown on the Management Center. [8825]
+- "Client heartbeat is timed out , closing connection" warning shows up indefinitely on AWS. [8777]
 - Spring XML configuration: The smart routing attribute defaults to false while the documentation says it defaults to true. [8746]
 - Distributed objects present in the cluster do not show the same values. [8743]
 - In Hazelcast 3.6.3, the error Current thread is not owner of the lock shows up when using Hazelcast client to perform the actions. [8730]
@@ -88,9 +91,12 @@ The following are the issues solved for 3.8 release.
 - Group and password attributes in Hibernate integration module should be validated. [7978]
 - There appears to be an inconsistency where JCache uses the EvictionConfig object, but IMap directly uses properties of the NearCacheConfig. [7788]
 - Member attributes go missing after merging from a split-brain scenario. [7697]
+- There should be a distributed class loading feature to perform distributed loading of classes so that jobs like MapReduce and Aggregate can be done more effectively. [7394]
 - MapLoader misses state updates on second load on the receiver members. [7364]
+- If the system retries an operation because a member is leaving the cluster, the invocation can be retried due to the response but also due to the "member-left" event. In most cases this should not lead to a problem, but the invocation may be executed twice. This can be a problem and can lead to a permanent inconsistent system. [7270]
 - Hazelcast 3.5 throws InvalidConfigurationException. [6523]
 - More granular mutexes should be used when creating and removing a set of closeable cache resources. [6273]
+- Running `PredicateBuilder` queries when nodes join causes timeouts and cluster crash. [6242]
 - The method setEvictionPolicy for near cache configuration wants a string argument whereas the same for map configuration wants an enum value. [2010]
 
 4. Removed/Deprecated Features
