Added the latest fixed issues/enhancements.

--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -65,18 +65,31 @@ This section lists the fixed issues for Hazelcast 3.8 and 3.8.x releases.
 
 The following are the issues solved for 3.8 release.
 
+- Ordering consistency for the the method `writePortable` should be explained in the Reference Manual. [9813]
+- A client cannot add index to map using Portable values without registering Portable classes on member. [9808]
+- Index is not updated after entry processors change values. [9801]
+- When using Entry Processor and index on a field the Entry Processor uses, wrong data is returned when executing a Predicate. [9798]
+- `NullPointerException` in `LockServiceImpl`: an NPE is thrown in `LockServiceImpl` when creating one map with a quorum configuration (which activates the `QuorumServiceImpl` for all `QuorumAware` operations) and then calling a `QuorumAware` operation on another data structure without a quorum configuration. [9792]
+- `ClusterVersion` is missing convenience methods for comparing easily. [9789]
+- When scheduling tasks with multiple executors, calling `getAllScheduled` on one of them returns tasks scheduled per member but for all executors, rather than for the one we called the `getAllScheduled` from. [9784]
+- There are too many log entries when quorum is not present. [9781]
+- When `storeAll`/`deleteAll` methods are used in the MapStore interface, it is possible that the underlying implementation has stored/deleted some entries from the supplied batch and then gets an exception on some particular entry in the middle of the batch. In order to handle this scenario properly the MapStore could remove from the supplied batch entries which were properly stored in the underlying persistent store. The only thing to improve in the `DefaultWiteBehindProcessor` is to properly synchronize the map passed to `processBatch` method with the initial `batchMap`. [9733]
 - If `hazelcast.discovery.enabled` on the client side: If neither `DiscoveryServiceProvider` nor `DiscoveryStrategyConfig` is specified, an NPE is thrown. A more helpful exception should be provided. [9722]
 - The hazelcast-all.jar, which is the one included in Hazelcast Docker, downloaded from Maven repo, contains an outdated version of hazelcast-aws library. [9698]
 - When scheduling on random partitions and trying to get all the scheduled tasks from the service, the number of tasks is wrong. The returned figure seems to match "num_of_tasks * backup_count". [9694]
 - When a scheduled Callable/Runnable throws an exception, invoking future.get() on the client side does not throw the expected ExecutionException. [9685]
+- The client is not updating listener registrations when the member restarts with a new version. [9677]
 - IScheduledExecutorService does not use HazelcastInstanceAware on local operations. [9675]
 - Near cache compatibility with 3.7 clients is broken for TTL expirations. [9674]
 - Replicated Map configured with `async-fillup` as `false` prevents further members from joining the cluster. Members are stuck in an endless loop. [9592]
 - When an exception is thrown from an `InitializingObject`'s initialize method, it is logged in WARNING level but then swallowed and the proxy object is added to the `ProxyRegistry`. Instead, the exception should result in removing the object from the `ProxyRegistry`, as it is already done for exceptions thrown from `service.createDistributedObject`. [9578]
+- Near cache pre-loader fails when invalidations are enabled. [9536]
 - There is a memory leak in `MetaDataGenerator` when (1) near cache invalidations are enabled, (2) map/cache is created and destroyed, and (3) the map name is stays referenced from `MetaDataGenerator`. [9495]
 - JCache client needs access to CacheLoader implementation to work. [9453]
 - The matching wildcard is strict, but no declaration can be found for element hz:hazelcast. [9406]
 - "Connection Reset" warning shows up in the class `CloudyUtility`. [9404]
+- Key state marking in near cached `getAll` should be improved. Instead of key based marking, partition based approach can be used. [9403]
+- Scheduled executor service tests are too slow. [9386]
 - The method getAll is not updating the localMapStats. [9373]
 - Hazelcast 3.7.3 and Spring Boot 1.4.2 get the error PortableFactory[-22] is already registered. [9353]
 - There is an issue when integrating with WebLogic 12c. Classloading logging should be added when DefaultNodeExtension is loaded by multiple classloaders. [9291]
@@ -87,6 +100,7 @@ The following are the issues solved for 3.8 release.
 - `LifecycleState` events are not received when Hazelcast docker image is used. [9189]
 - If there is no network, multicast socket exception is thrown. [9081]
 - Hazelcast is not handling XML configuration attribute for DurableExecutorService. [9078]
+- If `DurableExecutorService.retrieveResult(long)` is run from a client for a task that does not exist, two exceptions appear at the client side. At the member side, it logs `StaleTaskIdException`. This should not be logged to the member if re-thrown to the client. [9051]
 - When retrieving data from Java Hazelcast instance, `HazelcastSerializationException` is thrown from the .NET client. [8985]
 - Callback for time to live (for map eviction) is invoked with a significant delay. [8894]
 - "Warning 2" in IMap::tryRemove method's code comments is not correct. This method returns only a boolean. [8884]
